--- a/Solution.ipynb
+++ b/Solution.ipynb
@@ -84,6 +84,39 @@
    "outputs": [
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "source",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "0",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "ref": "01bc9154-b54b-42d6-af1b-e4a3527ea011",
+       "rows": [
+        [
+         "auxiliary",
+         "14209"
+        ],
+        [
+         "competition",
+         "385"
+        ],
+        [
+         "npn",
+         "4"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 3
+       }
+      },
       "text/plain": [
        "source\n",
        "auxiliary      14209\n",
@@ -759,6 +792,11 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv (3.9.6)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
